# c4

./: .gitignore  CMakeLists.txt  README.md  classes.xmi
CMakeModules/: FindARToolKit.cmake
src/: ARToolkitWidget.cpp  ARToolkitWidget.h  CMakeLists.txt  ColorButton.cpp  ColorButton.h  Config.h.in  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameResult.h  GameWidget.cpp  GameWidget.h  GlChip.cpp  GlChip.h  GlField.cpp  GlField.h  GlObject.cpp  GlObject.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Pattern.cpp  Pattern.h  Player.cpp  Player.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  gamewidget.cpp  gamewidget.h  glchip.cpp  glchip.h  glfield.cpp  glfield.h  globject.cpp  globject.h  main.cpp
src/Players/: AiPlayer.cpp  AiPlayer.h  AiPlayerGood.cpp  AiPlayerGood.h  HumanPlayer.cpp  HumanPlayer.h
